
  * Remove redundant override_dh_install in debian/rules
  * Prefer to report the Debian package version when available
  * Remove a redundant ARGS setting in debian/piaware.init
  * Rename package so it doesn't interfere with the official package.
  * Add Conflicts: piaware as both can't be installed at the same time.
  * Depend on adduser to fix lintian warning.

 -- Oliver Jowett <oliver@mutability.co.uk>  Sun, 07 Dec 2014 22:13:35 +0000

piaware (1.18-2+2mu-1) unstable; urgency=low

  * Unofficial repackaging of piaware to Be A Better Package.

 -- Oliver Jowett <oliver@mutability.co.uk>  Sun, 07 Dec 2014 21:36:52 +0000

piaware (1.18-2) stable; urgency=medium

  * Principally this release is to bump the version number because the
    1.18-1 SD card image zip file was corrupt.

  * Reload adept config on update request in case piaware-config has been
    run and used to change something since piaware last started.

 -- FlightAware Developers <adsb-devs@flightaware.com>  Tue, 19 Nov 2014 17:52:42 +0000

piaware (1.18-1) stable; urgency=medium

  * Fix "too many nested evaluations" error on systems without an eth0 device.

  * Include full piaware version (like 1.18-1 vs just 1.18) in login message.

  * Cache the mac address once it is known, for performance.

 -- FlightAware Developers <adsb-devs@flightaware.com>  Tue, 18 Nov 2014 20:18:03 +0000

piaware (1.17-2) stable; urgency=high

  * Fix bug in reconnecting after receiving an unrecognized message
    from the server.

  * Get a mac address from alternate source like wlan0 if no eth0 is present

  * Don't invoke rpi-update as part of a full update.

 -- FlightAware Developers <adsb-devs@flightaware.com>  Tue, 18 Nov 2014 00:44:21 +0000

piaware (1.17-1) stable; urgency=medium

  * Disconnect/reconnect after detecting an error in a server message.
    Although we don't believe the runaway logging is caused by a server
    message, whatever the cause this should interrupt the runaway.
