@@ -6,6 +6,7 @@ piaware-mutability (1.18-2+2mu-2) UNRELEASED; urgency=medium
   * Rename package so it doesn't interfere with the official package.
   * Add Conflicts: piaware as both can't be installed at the same time.
   * Depend on adduser to fix lintian warning.
+  * Add a config option to disable sending system health information.
 
  -- Oliver Jowett <oliver@mutability.co.uk>  Sun, 07 Dec 2014 22:13:35 +0000
 
